@@ -1,3 +1,9 @@
+September 5, 2009 Wei Mingzhi <weimingzhi@gmail.com>
+
+ * libpcsxcore/cdriso.c: Don't feed CDDA data to the SPU plugin when CDDA
+   is muted, which fixes the "noise" in Final Fantasy 8. Also check for
+   image.bin.toc in addition to image.toc.
+
 September 4, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
  * libpcsxcore/cdriso.c: Don't delay before feeding CDDA data to the SPU
